// Copyright Â© 2021 AMIS Technologies
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package validation;

option go_package = "github.com/getamis/alice/crypto/bip32/validation";

import "github.com/getamis/alice/crypto/zkproof/paillier/message.proto";

message Round1Message {
    bytes encH = 1;
    paillier.EncryptRangeMessage psi = 2; 
}

message Round2Message {
    bytes encResponse = 1;
    bytes compareHashResult = 2;
    paillier.simplifyPaillierOperationAndCommitmentMessage proof = 3;
}